Fixed responsiveness on mobile small screen

--- a/src/Home.css
+++ b/src/Home.css
@@ -138,9 +138,11 @@ h1{
     flex-direction: column;
     grid-column: 6/-1;
 }
-
-
-@media (max-width:60em){
+/* Iphone X*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
     .Home-goal h2{
         font-size: 1.5em;
         height: 2em;
@@ -163,9 +165,18 @@ h1{
     .Home-goal p{
         padding-bottom: 1em;
     }
-    
 }
-@media (max-width:90em){
+/* Ipad*/
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .Home-img-wrapper{
+        position: relative;
+        width: 100%;
+        margin: 2em 0;
+    }
     .Home-goal{
         height: fit-content;
     }
@@ -257,7 +268,15 @@ h1{
     /* padding-bottom: 10px; */
     line-height: 1.5em;
 }
-@media (max-width: 60em){
+
+/* Iphone X*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+    .Home-rules{
+        height: fit-content;
+    }
     .Home-rules h2{
         font-size: 1.5em;
         height: 2.5%;
@@ -270,31 +289,22 @@ h1{
         margin: 0;
         padding: 0 .5rem;
     }
-    .Home-rules{
-        /* height: 220vh; */
-        height: fit-content;
-    }
+  }
+  /* Ipad*/
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    
 }
 
-@media (max-width: 90em) {
-    .Home-rules{
-        height: fit-content;
-    }
-    .Home-rules-content-wrapper{
-        margin: 0;
-    }
-}
-@media(max-width: 40em){
-    .Home-rules{
-        /* height: 280vh; */
-    }
-}
+
 
 /* Hands ---------------------------------------------------------------- */
 
 .Home-hands{
     background: #0A0A0A;
-    height: 200vh;
+    height: fit-content;
 }
 .Home-hands span{
     color: yellow;
@@ -367,7 +377,7 @@ margin-bottom: 1rem;
     background: yellow;
     padding: 1rem;
     margin: 0 auto;
-    width: 75%;
+    width: 15rem;
     font-size:1.5rem;
     color: black;
     font-weight: bold;
@@ -394,13 +404,16 @@ li>div>p{
     font-style: italic;
     margin-top: .5rem;
 }
-@media (max-width:80em){
-    .Home-hands{
-        height: fit-content;
+
+
+/* Iphone X */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) {
+    .Home-container{
+        scroll-snap-type: none;
     }
-}
-@media (max-width:70em){
-    
     .Home-hands-container{
         flex-direction: column;
         justify-content: center;
@@ -418,10 +431,36 @@ li>div>p{
     .calc-btn{
         position: static;
     }
-}
-@media (max-width:65em){
+    .Home-hands{
+        height: fit-content;
+    }
+  }
+  /* Ipad */
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
     .Home-container{
         scroll-snap-type: none;
     }
-    
+    .Home-hands-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        width: 100%;
+    }
+    .Home-hands-notes-container{
+        position: static;
+        width: 60%;
+    }
+    .Home-hands-winningHands-container{
+        width: 60%;
+    }
+    .calc-btn{
+        position: static;
+    }
+    .Home-hands{
+        height: fit-content;
+    }
 }
