--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -44,3 +44,22 @@ a{
         display: none;
     }
 }
+/* Iphone X */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) {
+    .Navbar-bottom{
+        display: none;
+    }
+  }
+/* Ipad */
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .Navbar-bottom{
+        display: none;
+    }
+  }
+
